tests/rustdoc-ui/infinite-recursive-type.rs
enum E {
//~^ ERROR recursive type `E` has infinite size
    V(E),
}
